# Boids_simulation

./: AOS.cpp  AOS_helper.h  AOS_helper_SIMD.h  AOS_helper_padding.h  AOS_parallel.cpp  AOS_parallel_SIMD.cpp  CMakeLists.txt  README.md  SOA.cpp  SOA_helper.h  SOA_helper_SIMD.h  SOA_parallel_SIMD.cpp  helper.h  main.cpp  run_benchmark.py  sequential.cpp  sequential_helper.h  stats_plots_script.py
headers/: AOS_helper.h  AOS_helper_SIMD.h  SOA_helper.h  SOA_helper_SIMD.h
scripts/: run_benchmark.py  stats_plots_script.py
